<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/herdingCats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/movesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movesText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/herdingCats" />

    <TextView
        android:id="@+id/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/movesText"
        app:layout_constraintTop_toBottomOf="@+id/herdingCats"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/treatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1"
        android:text="@string/treatText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/downBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/downBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBtn"
        app:layout_constraintStart_toEndOf="@+id/treatBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/downBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/treatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatsText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movesText" />

    <TextView
        android:id="@+id/treats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/treatsText"
        app:layout_constraintTop_toBottomOf="@+id/movesText"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/caughtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caughtText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treatsText" />

    <TextView
        android:id="@+id/caught"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/caughtText"
        app:layout_constraintTop_toBottomOf="@+id/treatsText"
        android:textIsSelectable="true" />

    <edu.sdsmt.hcats_justice_aidan.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatColorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="@string/floatBlack"
        android:onClick="onBlack"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/backgroundPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/presence_invisible"
        app:tint="#000000" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatColorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="@string/floatRed"
        android:onClick="onRed"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/backgroundPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/presence_invisible"
        app:tint="#f54040" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatColorBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="@string/floatBlue"
        android:onClick="onBlue"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/backgroundPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/presence_invisible"
        app:tint="#4f6cff" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/floatBurst"
        android:onClick="onBurst"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/backgroundPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/presence_invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backgroundPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="@string/floatBackgroundPurple"
        android:onClick="onBackgroundPurple"
        android:scaleX=".8"
        android:scaleY=".8"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@android:drawable/checkbox_off_background"
        app:tint="#b8a6ff" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backgroundWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="@string/floatBackgroundWhite"
        android:onClick="onBackgroundWhite"
        android:scaleX=".8"
        android:scaleY=".8"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@android:drawable/checkbox_off_background"
        app:tint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/floatBackgroundBurst"
        android:onClick="onBackgroundBurst"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@android:drawable/checkbox_off_background" />

</androidx.constraintlayout.widget.ConstraintLayout>